--- a/hello.css
+++ b/hello.css
@@ -14,7 +14,7 @@ a {
 
 header {
   text-align: center;
-  padding: 2rem;
+  padding: 2rem, 2rem, 2rem, 1rem;
 }
 
 header p:nth-child(1) {
@@ -28,10 +28,11 @@ header p:nth-child(2) {
   letter-spacing: .2em;
   text-transform: uppercase;
   letter-spacing: .2em;
+  font-family: "Covered By Your Grace", cursive;
 }
 
-header p{
-  font-family: "Covered By Your Grace", cursive;
+nav{
+	
 }
 
 main {
