--- a/hello.css
+++ b/hello.css
@@ -31,8 +31,21 @@ header p:nth-child(2) {
   font-family: "Covered By Your Grace", cursive;
 }
 
-nav{
-	
+nav a:{
+	padding: 10px;
+}
+
+nav a:link{
+	color: white;
+}
+
+nav a:visited{
+	color: grey;
+}
+
+nav a:hover{
+	color: white;
+	font-size: 125%;
 }
 
 main {
