--- a/hello.css
+++ b/hello.css
@@ -76,6 +76,24 @@ main p {
   margin: 0 auto 1rem;
 }
 
+main p ul {
+  width: 30rem;
+  max-width: 80%;
+  margin: 0 auto 1rem;
+}
+
+main p ul li {
+  width: 30rem;
+  max-width: 80%;
+  margin: 0 auto 1rem;
+}
+
+main p ul li ul {
+  width: 30rem;
+  max-width: 80%;
+  margin: 0 auto 1rem;
+}
+
 .social {
   list-style: none;
   margin: 1rem auto 0;
