--- a/hello.css
+++ b/hello.css
@@ -53,7 +53,9 @@ main {
   background-color: white;
   color: black;
   padding: 2rem 0 4rem;
-  width:70%;
+  width:100%;
+  margin: auto;
+  
 }
 
 h1 {
@@ -79,22 +81,26 @@ main p {
   width: 30rem;
   max-width: 80%;
   margin: 0 auto 1rem;
+  margin: auto;
 }
 
 main p ul {
   width: 70%;
   margin: 0 auto 1rem;
+  margin: auto;
 }
 
 main p ul li {
   width: 70%;
   margin: 0 auto 1rem;
+  margin: auto;
 }
 
 main p ul li ul {
   width: 70%;
   margin: 0 auto 1rem;
-}
+  margin: auto;
+ }
 
 .social {
   list-style: none;
