--- a/hello.css
+++ b/hello.css
@@ -79,7 +79,7 @@ main img {
 
 main p {
   width: 30rem;
-  max-width: 80%;
+  max-width: 70%;
   margin: 0 auto 1rem;
   margin: auto;
 }
@@ -90,7 +90,7 @@ main p ul {
   margin: auto;
 }
 
-main p ul li {
+main p ul li h2{
   width: 70%;
   margin: 0 auto 1rem;
   margin: auto;
