--- a/hello.css
+++ b/hello.css
@@ -21,6 +21,7 @@ header p:nth-child(1) {
   font-weight: bold;
   font-size: 2rem;
   margin: 0;
+  padding: 2rem, 2rem, 2rem, 1rem;
 }
 
 header p:nth-child(2) {
@@ -33,7 +34,7 @@ header p:nth-child(2) {
 
 nav a:{
 	padding: 20px;
-	margin: 20px;
+	margin: 20px 20px auto 20px;
 }
 
 nav a:link{
