--- a/hello.css
+++ b/hello.css
@@ -20,7 +20,7 @@ header {
 header p:nth-child(1) {
   font-weight: bold;
   font-size: 2rem;
-  margin: 0;
+  margin: auto, 20px, auto, auto;
   padding: 2rem, 2rem, 2rem, 1rem;
 }
 
@@ -42,7 +42,7 @@ nav a:link{
 }
 
 nav a:visited{
-	color: grey;
+	color: white;
 }
 
 nav a:hover{
