--- a/hello.css
+++ b/hello.css
@@ -69,14 +69,28 @@ h2{
 	font-family: "Covered By Your Grace", cursive;
 }
 
-main img {
+#leftMain img {
   display: block;
   width: 12rem;
   max-width: 60%;
   margin: auto;
   height: auto;
   border-radius: 50%;
+  padding: 10px;
+  float: left;
 }
+
+#rightMain img {
+  display: block;
+  width: 12rem;
+  max-width: 60%;
+  margin: auto;
+  height: auto;
+  border-radius: 50%;
+  padding: 10px;
+  float: right;
+}
+
 
 main p {
   width: 30rem;
