--- a/hello.css
+++ b/hello.css
@@ -80,6 +80,16 @@ h2{
   float: left;
 }
 
+main img {
+  display: block;
+  width: 12rem;
+  max-width: 60%;
+  margin: auto;
+  height: auto;
+  border-radius: 50%;
+  padding: 10px;
+  float: right;
+
 #rightMain img {
   display: block;
   width: 12rem;
