--- a/hello.css
+++ b/hello.css
@@ -88,6 +88,17 @@ main img {
   border-radius: 50%;
   padding: 10px;
 }
+
+.imageright{
+  display: block;
+  width: 12rem;
+  max-width: 60%;
+  margin: auto;
+  height: auto;
+  border-radius: 50%;
+  padding: 10px;
+  float: right;
+}
   
 #rightMain img {
   display: block;
